# Exocryption

./: .gitignore  CHANGELOG  Cargo.toml  Exocryption  README.md  key.json  message.json
src/: ciphers.rs  decrypt.rs  encrypt.rs  genidentity.rs  keyderivation.rs  main copy.rs  main.rs  serializer.rs  varint.rs  weirdrng.rs
src/encryption/: aes.rs
src/encryption/aes/: cbc.rs
src/keyderivation/: argon2.rs  hkdf.rs
src/mac/: hmac.rs
