[package]
name = "exocryption"
version = "0.0.3"
authors = ["Exopteron <exopteron@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
argon2 = { version = "0.2", features = ["password-hash"] }
rand_core = { version = "0.6", features = ["std"] }
chacha20poly1305 = "0.8.0"
rand = "^0.6.0"
serde_json = "^1.0.59"
serde = { version = "1.0", features = ["derive"] }
getopts = "0.2.21"
aes-gcm-siv = "0.10.0"
aes = "0.7.3"
integer-encoding = "3.0.2"
block-modes = "0.8.1"
hmac = "0.11.0"
sha3 = "0.9.1"
rand_chacha = "0.3.0"
aes-gcm = "0.9.2"