[package]
name = "Exocryption"
version = "1.0.0"
authors = ["Exopteron <exopteron@example.com>"]
repository = "https://github.com/Exopteron/Exocryption"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
argon2 = { version = "0.2", features = ["password-hash"] }
integer-encoding = "3.0.2"
hkdf = "0.11.0"
sha3 = "0.9.1"
hmac = "0.11.0"
aes = "0.7.3"
block-modes = "0.8.1"
rand = "^0.6.0"